Add Link draw type
New draw type, I'm using the JSON field for simplification as the list
of items here can be only of str.  We could use the PostgreSQL ListType
but then we won't be able to test locally with sqlite.
